--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
-  
   <display-name>Booking_entrega2</display-name>
   <welcome-file-list>
     <welcome-file>/WEB-INF/index.jsp</welcome-file>
@@ -14,6 +13,17 @@
       <transport-guarantee>CONFIDENTIAL</transport-guarantee>
     </user-data-constraint>
   </security-constraint>
-  
-  
+  <servlet>
+    <description></description>
+    <display-name>CheckReviewServlet</display-name>
+    <servlet-name>CheckReviewServlet</servlet-name>
+    <servlet-class>es.unex.pi.controller.CheckReviewServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name>CreateReviewServlet</display-name>
+    <servlet-name>CreateReviewServlet</servlet-name>
+    <servlet-class>es.unex.pi.controller.CreateReviewServlet</servlet-class>
+  </servlet>
+
 </web-app>
