--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
+ 
   <display-name>Booking_entrega2</display-name>
   <welcome-file-list>
     <welcome-file>/WEB-INF/index.jsp</welcome-file>
   </welcome-file-list>
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>Booking</web-resource-name>
-      <url-pattern>/*</url-pattern>
-    </web-resource-collection>
-    <user-data-constraint>
-      <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-    </user-data-constraint>
-  </security-constraint>
   <servlet>
     <description></description>
     <display-name>CheckReviewServlet</display-name>
@@ -52,6 +44,12 @@
     <display-name>deleteFavoritePropertyUserServlet</display-name>
     <servlet-name>deleteFavoritePropertyUserServlet</servlet-name>
     <servlet-class>es.unex.pi.controller.deleteFavoritePropertyUserServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name>EditReviewServlet</display-name>
+    <servlet-name>EditReviewServlet</servlet-name>
+    <servlet-class>es.unex.pi.controller.EditReviewServlet</servlet-class>
   </servlet>
  
 </web-app>
