Añadido la funcionalidad de eliminar review y solucionado el fallo al listar las reviews, que siempre salia como nombre el mismo alojamiento y por lo tanto, al querer editar, nos enviaba siempre al mismo alojamiento

--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -63,5 +63,11 @@
     <servlet-name>ListReviewsServlet</servlet-name>
     <servlet-class>es.unex.pi.controller.ListReviewsServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description></description>
+    <display-name>DeleteReviewServlet</display-name>
+    <servlet-name>DeleteReviewServlet</servlet-name>
+    <servlet-class>es.unex.pi.controller.DeleteReviewServlet</servlet-class>
+  </servlet>
 
 </web-app>
