--- a/Entrega2/Booking_entrega2/.settings/org.eclipse.core.resources.prefs
+++ b/Entrega2/Booking_entrega2/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/listaAlojamientos.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/listaHabitaciones.jsp=UTF-8
 encoding/<project>=UTF-8
