--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,16 @@
   <welcome-file-list>
     <welcome-file>InicioBookingServlet.do</welcome-file>
   </welcome-file-list>
+  <security-constraint>
+	
+	<web-resource-collection>
+		<web-resource-name>Entire Application</web-resource-name>
+		<url-pattern>/*</url-pattern>
+	</web-resource-collection>
+	<user-data-constraint>
+		<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+	</user-data-constraint>
+  </security-constraint>
   <servlet>
     <description></description>
     <display-name>CheckReviewServlet</display-name>
