--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,20 @@
 		<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 	</user-data-constraint>
   </security-constraint>
+  
+   <servlet>
+    <servlet-name>JerseyRESTService</servlet-name>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+    <init-param>
+      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-value>es.unex.pi.resources</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>JerseyRESTService</servlet-name>
+    <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>CheckReviewServlet</display-name>
