API de user y property

--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,10 @@
   <welcome-file-list>
     <welcome-file>InicioBookingServlet.do</welcome-file>
   </welcome-file-list>
+  
+ <!--Comenta desde aquí si tu TOMCAT no está configurado para SSL -->
+ <!--
   <security-constraint>
-	
 	<web-resource-collection>
 		<web-resource-name>Entire Application</web-resource-name>
 		<url-pattern>/*</url-pattern>
@@ -14,6 +16,7 @@
 		<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 	</user-data-constraint>
   </security-constraint>
+  -->
   
    <servlet>
     <servlet-name>JerseyRESTService</servlet-name>
