--- a/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
+++ b/Entrega2/Booking_entrega2/src/main/webapp/WEB-INF/web.xml
@@ -169,6 +169,6 @@
         <filter-name>CorsFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+<!-- DEPENDENCIAS PARA APLICAR Y AÑADIR LOS PAQUETES DE JWT-->
 
 </web-app>
